# dialogue-reasoning

./: .gitignore  README.md  analysis.ipynb  generate_data.py  main.py  pyproject.toml
datagen/: 0_generate_data.py  1_analysis.ipynb  2_json_to_training_data.py
methods/: baselines.py  debate.py
src/: agents.py  clients.py  extract.py  utils.py
train/: 0_train_debate_lora.py  1_test.py  2.1_analyze_evaluation.ipynb  2_run_evaluation.py  rl.py
