[project]
name = "dialogue-reasoning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=3.6.0",
    "ipdb>=0.13.13",
    "matplotlib>=3.10.3",
    "openai>=1.93.0",
    "pandas>=2.3.0",
    "python-dotenv>=1.1.1",
    "seaborn>=0.13.2",
]
