[project]
name = "dialogue-reasoning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.8.1",
    "azure-identity>=1.23.0",
    "bitsandbytes>=0.46.1",
    "datasets>=3.6.0",
    "ipdb>=0.13.13",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.3",
    "openai>=1.93.0",
    "pandas>=2.3.0",
    "peft>=0.16.0",
    "python-dotenv>=1.1.1",
    "seaborn>=0.13.2",
    "transformers>=4.53.2",
    "trl>=0.20.0",
    "wandb>=0.21.0",
]
